[gd_scene load_steps=6 format=3 uid="uid://tsiupfvchmkd"]

[ext_resource type="Script" uid="uid://c4wyou7a7ia6y" path="res://Scenes/GameUI/game_ui.gd" id="1_0u7gi"]
[ext_resource type="LabelSettings" uid="uid://di2j6blfab261" path="res://Resources/FontStyle/red_font_32.tres" id="1_smc31"]
[ext_resource type="LabelSettings" uid="uid://dax5pkn3jflgm" path="res://Resources/FontStyle/red_font_72.tres" id="2_0u7gi"]
[ext_resource type="LabelSettings" uid="uid://b8i6tw54hc6by" path="res://Resources/FontStyle/white_font_52.tres" id="3_u0r4i"]
[ext_resource type="AudioStream" uid="uid://c0uuicl6twkqy" path="res://Assets/audio/score.wav" id="5_u0r4i"]

[node name="GameUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0u7gi")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="ScoringLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "0000"
label_settings = ExtResource("1_smc31")

[node name="GameOverLabel" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Game Over"
label_settings = ExtResource("2_0u7gi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PressSpaceLabel" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Press Space "
label_settings = ExtResource("3_u0r4i")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_u0r4i")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
